--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "framer-motion": "^11.2.4",
-    "hamburger-react": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
