--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "plugins": ["prettier-plugin-tailwindcss"],
   "singleQuote": true,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "semi": true,
+  "trailingComma": "es5"
 }
