--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.49.2",
     "axios": "^1.7.2",
     "eslint": "8.57.0",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.2.12",
     "rc-rate": "^2.13.0",
     "react": "^18.3.1",
